--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -11,10 +11,11 @@
 		<title>Evan Fleet</title>
 	</head>
 	<body>
-		<a href="/">Home</a>
+    <a href="/">Home</a>
 		<a href="/about/">About</a>
 		<a href="/blog/">Blog</a>
 
-		<h1>Evan Fleet</h1>
+		<h1>About Me</h1>
+    <p>Lorem ipsum</p>
 	</body>
 </html>
