--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,21 +1,10 @@
 ---
+import BaseLayout from '../layouts/BaseLayout.astro';
 
+const pageTitle = 'About';
 ---
 
-<html lang="en">
-	<head>
-		<meta charset="utf-8" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="viewport" content="width=device-width" />
-		<meta name="generator" content={Astro.generator} />
-		<title>Evan Fleet</title>
-	</head>
-	<body>
-    <a href="/">Home</a>
-		<a href="/about/">About</a>
-		<a href="/blog/">Blog</a>
-
-		<h1>About Me</h1>
-    <p>Lorem ipsum</p>
-	</body>
-</html>
+<BaseLayout pageTitle={pageTitle}>
+	<h1>About Me</h1>
+  <p>Lorem ipsum</p>
+</BaseLayout>
