--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,20 +1,9 @@
 ---
+import BaseLayout from '../layouts/BaseLayout.astro';
 
+const pageTitle = 'Home';
 ---
 
-<html lang="en">
-	<head>
-		<meta charset="utf-8" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="viewport" content="width=device-width" />
-		<meta name="generator" content={Astro.generator} />
-		<title>Evan Fleet</title>
-	</head>
-	<body>
-		<a href="/">Home</a>
-		<a href="/about/">About</a>
-		<a href="/blog/">Blog</a>
-
-		<h1>Evan Fleet</h1>
-	</body>
-</html>
+<BaseLayout pageTitle={pageTitle}>
+	<h1>Evan Fleet</h1>
+</BaseLayout>
